...
"Amber" = "Amber";
"Orange" = "Orange";
"Deep Orange" = "Deep Orange";
"Glass" = "Glass";
"Glass Dark" = "Glass Dark";
"Automatic Dark Mode" = "Automatic Dark Mode";
"Preview" = "Preview";

/* Keyboard type / pack names */
"Default" = "Default";
"Math" = "Math";
"Finance" = "Finance";
"Symbols & Science" = "Symbols & Science";
...
